--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
       <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
-        excepturi aut non
+        excepturi aut non 
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
       </p>
     </header>
@@ -33,10 +33,6 @@
               To Do
             </h4>
             <ul id="list-toDo" class="list-group list-group flush">
-              <!-- <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task to do</p>
-              </li> -->
             </ul>
           </div>
         </div>
@@ -48,10 +44,6 @@
               In progress
             </h4>
             <ul id="list-inProgress" class="list-group list-group flush">
-              <!-- <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task in progress</p>
-              </li> -->
             </ul>
           </div>
         </div>
@@ -123,6 +115,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
